# ophix-theme-fastrack

./: .gitignore  README.md  gen_version.py  pyproject.toml
src/imago_theme_fastrack/: apps.py
src/imago_theme_fastrack/deploy_templates/: env.fragment.j2
src/ophix_theme_fastrack/: OPHIX_RELEASE_NOTES.md  __init__.py  _version.py  apps.py
src/ophix_theme_fastrack/deploy_templates/: env.fragment.j2
src/ophix_theme_fastrack/themes/Fastrack/: theme.json
