[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ophix-theme-fastrack"
version = "2026.04.27.01"
description = "Fastrack theme for Ophix Project Servers"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Fastrack" }
]
dependencies = [
    "ophix-admin-interface>=2026.05.16.01",
]

[project.entry-points."ophix.plugins"]
ophix_theme_fastrack = "ophix_theme_fastrack"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ophix_theme_fastrack = [
    "themes/**/*",
    "deploy_templates/**/*",
]
